--- a/crazy.html
+++ b/crazy.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>A Crazy Experiment</h1>
+  Thí nghiệm điên rồ
   <p>We're trying out a <span style="color: #F0F">crazy</span>
   <span style="color: #06C">experiment</span>!
     
