--- a/index.html
+++ b/index.html
@@ -12,5 +12,18 @@
   <ul>
     <li>Nothing going on (yet)</li>
   </ul>
+  <h2>Navigation</h2>
+<ul>
+  <li style="color: #F90">
+    <a href="orange.html">The Orange Page</a>
+  </li>
+  <li style="color: #00F">
+    <a href="blue.html">The Blue Page</a>
+  </li>
+  <li>
+    <a href="dummy.html">The Dummy Page</a>
+  </li>
+</ul>
+  
 </body>
 </html>
