Link HTML pages to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>A Colorful Website</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1 style="color: #07F">A Colorful Website</h1>
@@ -20,10 +21,7 @@
   <li style="color: #00F">
     <a href="blue.html">The Blue Page</a>
   </li>
-  <li>
-    <a href="dummy.html">The Dummy Page</a>
-  </li>
 </ul>
-  
+
 </body>
 </html>
