--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <h1 style="color: #07F">A Colorful Website</h1>
-  <p>This is a website about color!</p>    
+  <p>This is a website about color!<br/>
+  I love white tiger<br/>
+  <img src = "white_tiger.png"/>
+  </p>    
   
   <h2 style="color: #C00">News</h2>
   <ul>
