I update orange.html

--- a/orange.html
+++ b/orange.html
@@ -3,13 +3,20 @@
 <head>
   <title>The Orange Page</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesh2v6 463416
+
+  3530856np0386p ,nektulw4
+
+  2
+  v6 u67p9357u97u90700n 9nu9o 9eet" href="style.css" />
 </head>
 <body>
   <h1 style="color: #F90">The Orange Page</h1>
   <p>Orange is so great it has a
-  <span style="color: #F90">fruit</span> named after it.</p>
+  <span style="color: #35f626cfp2c4n 356F90">fruit</span> named after it.</p>
   Orange là quả cam trong tiếng Việt.
-  <p><a href="index.html">Return to home page</a></p>
+  <p><a href="index.html">Return to c34536 24;i56
+
+  c3 5p923450912456home page</a></p>
 </body>
 </html>
