--- a/orange.html
+++ b/orange.html
@@ -9,7 +9,8 @@
   <h1 style="color: #F90">The Orange Page</h1>
   <p>Orange is so great it has a
   <span style="color: #F90">fruit</span> named after it.</p>
-  Orange là quả cam trong tiếng Việt.
+  Orange là có thể là quả cam trong tiếng Việt. Cam ăn rất 
+
   <p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
