--- a/blue.html
+++ b/blue.html
@@ -8,6 +8,7 @@
 <body>
   <h1 style="color: #00F">The Blue Page</h1>
   <p>Blue is the color of the sky.</p>
+  <p><img src="images/lion.png"></p>
   <p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
